# hydra

./: .gitignore  CMakeLists.txt  tags
BackTester/: Makefile
BackTester/config/: default.cfg
BackTester/include/: BackTester.h  MdAdapter.h
BackTester/src/: BackTester.cpp  CalCorre.py  Main.cpp  MdAdapter.cpp  NetStock.py  Replayer.py  SelfMACD.py  tes.py  testStrtgy.py
Backtester/: CMakeLists.txt  Makefile
Backtester/config/: Backtester.json
Backtester/include/: Backtester.h  BasicFuturesDataAdapter.h  BasicStockDataAdapter.h  DataAdapter.h  DataAdapterFactory.h  DataAdapterHelper.h  DayDataAdapter.h  GTAAdapter.h  GTAHelper.h  OrderBook.h  RangeDataAdapter.h
Backtester/src/: Backtester.cpp  Main.cpp  OrderBook.cpp
CTPMarketData/: CMakeLists.txt  Makefile
CTPMarketData/config/: CTPMarketData.json  DummyStrat.json
CTPMarketData/include/: MDHandler.h
CTPMarketData/src/: DummyStrat.cpp  DummyStrat.cpp.bak  MDHandler.cpp  Main.cpp
CTPTrade/: CMakeLists.txt  Makefile
CTPTrade/config/: CTPTrade.json
CTPTrade/include/: TradeHandler.h
CTPTrade/src/: Main.cpp  TradeHandler.cpp
CatsTradeMktUpdt/CatsMktUpdt/: CatsMktUpdt.cpp  CatsMktUpdt.h  Main.cpp
CedarHelper/: CMakeLists.txt  Makefile
CedarHelper/config/: CedarHelper.json
CedarHelper/include/: CedarHelper.h  CedarLogger.h  CedarLogging.h  CedarLogging.h.bak  CedarLogging.py  CedarStringHelper.h  CedarTimeHelper.h  CmdLineParser.h  EnumStringMap.h  IncludeOnlyInMain.h  JsonHelper.h  LogHelper.h  MarketSpecHelper.h  MarketUpdateHelper.h  PersistentState.h  easylogging++.h
CedarHelper/src/: Main.cpp
CedarJsonConfig/: CMakeLists.txt  Makefile
CedarJsonConfig/config/: CedarJsonConfig.json
CedarJsonConfig/include/: CedarJsonConfig.h
CedarJsonConfig/src/: Main.cpp
Indicator/include/: KDJ.h  MA.h  RSI.h  SMA.h
Indicator/src/: Main.cpp
LogMonitor/: AlgoTable.py  BatchTable.py  MonitorData.py  MonitorServer.py  OrderTable.py  StatusServer.py  index.html
LtsMarketUpdate/: CMakeLists.txt
LtsMarketUpdate/config/: LtsMarketUpdate.json
LtsMarketUpdate/include/: LtsMarketUpdate.h  SecurityFtdcUserApiDataType.h  SecurityFtdcUserApiStruct.h
LtsMarketUpdate/src/: LTSMarketData.cpp  LtsMarketUpdate.cpp  Main.cpp
ManualOrder/: CMakeLists.txt  Makefile
ManualOrder/config/: ManualOrder.json
ManualOrder/include/: ManualOrder.h
ManualOrder/src/: BackupTest.cpp  Main.cpp  ManualOrder.cpp  Testcase.cpp
MiscScripts/: WalkMatchDo.py  WindFuturesDataDispatcher.py
OrderDispatcher/: OrderDispatcher.py
OrderDispatcher/config/: OrderDispatcher.json
ProtoBufMsg/: CPlusPlusMain  CPlusPlusMain.cpp  Makefile  ProtoBufMsg.proto  PythonMain  PythonMain.py
ProtoBufMsg/CPlusPlusCode/: ProtoBufMsg.pb.cc  ProtoBufMsg.pb.h
ProtoBufMsg/PythonCode/: ProtoBufMsg_pb2.py
ProtoBufMsgHub/: CMakeLists.txt  Makefile
ProtoBufMsgHub/config/: ProtoBufMsgHub.json  TestClient.json
ProtoBufMsgHub/include/: ProtoBufMsgHub.h  ProtoBufMsgHub.py
ProtoBufMsgHub/src/: Main.cpp  TestClient.cpp
ShareConfig/: AShare.json  ChinaFutures.json  CronScript.py  MarketSpecification.json  ServerMap.json  StockService.py  receive.conf  stopLogStash.sh
SmartOrderService/: CMakeLists.txt  Makefile
SmartOrderService/config/: SmartOrderService.json
SmartOrderService/include/: FirstLevelOrder.h  OrderReactor.h  SmallOrder.h  SmartOrder.h  SmartOrderService.h
SmartOrderService/src/: FirstLevelOrder.cpp  Main.cpp  SmallOrder.cpp  SmartOrder.cpp  SmartOrderService.cpp  StockProcessor.cpp
StockMonitor/: Makefile
StockMonitor/config/: StockMonitor.json
StockMonitor/src/: Main.cpp  (+1 more)
StratBase/: CMakeLists.txt  Makefile
StratBase/config/: BasicKD.json  MVCross.json
StratBase/include/: BasicKD.h  BasicRSI.h  DualKD.h  DualRSI.h  OrderAgent.h  OrderDelegate.h  PositionManager.h  RangeStat.h  RangeStatCollector.h  StratBase.h  StratTemplate.h  TechnicalHelper.h  TransacLogger.h
StratBase/src/: AnalysisBacktestResult.py  BasicKD.cpp  BasicKDMain.cpp  BasicRSI.cpp  BasicRSIMain.cpp  DualKD.cpp  DualKDMain.cpp  DualRSI.cpp  DualRSIMain.cpp  MVCross.cpp  Main.cpp  OrderDelegate.cpp  StratBase.cpp  StratTemplate.cpp
TdxInterface/: TdxInterface.sln
WindDataCollector/: Makefile
WindDataCrawler/: TradingSession.json  WindDayDeltaUpdate.py  WindMinDeltaUpdate.py
WindMarketData/: Makefile
(+513 files in other folders)
